# InternshipOnFEniCS-Without-UFL

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  Plas3D.cpp  Plas3D.h  Plas3D.ufl  Plas3DWithForce.cpp  Plas3DWithForce.h  Plas3DWithForce.ufl  README.md  compileUfl.sh  cylinder.geo  cylinder.msh  cylinder.xml  main.cpp  mainSnfC.cpp  mainSnfCWithForce.cpp
src/: CMakeLists.txt  ConstitutiveUpdate.cpp  ConstitutiveUpdate.h  DruckerPrager.cpp  DruckerPrager.h  FenicsSolidMechanics.h  HistoryData.cpp  HistoryData.h  PlasticityModel.cpp  PlasticityModel.h  PlasticityProblem.cpp  PlasticityProblem.h  QuadratureFunction.cpp  QuadratureFunction.h  ReturnMapping.cpp  ReturnMapping.h  SinfoniettaClassica.cpp  SinfoniettaClassica.h  StateUpdate.h  VonMises.cpp  VonMises.h  WriteToOctaveASCII.hpp  utils.cpp  utils.h
